manifests/kubernetes/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend-deployment
 labels:
   app: backend-app
 namespace: capstone-project
spec:
 replicas: 2
 selector:
   matchLabels:
     app: backend-app
 template:
   metadata:
     name: backend-app
     labels:
       app: backend-app
   spec:
     containers:
       - name: backend-app
         image: ahad8/backend:latest
         ports:
           - containerPort: 3000
