manifests/kubernetes/backend_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
  namespace: capstone-project
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: backend-app
